--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,16 +5,97 @@ trigger:
     exclude:
     - develop
 
-pool:
-  vmImage: 'ubuntu-latest'
+variables:
+  - name: subscription
+    value: ''
+  - name: resourceGroupName
+    value: ''
+  - name: locationName
+    value: ''
+  - name: storageAccountName
+    value: ''
+  - name: componentName
+    value: ''
+  - name: serverfarmName
+    value: ''
+  - name: siteName
+    value: ''
 
-steps:
-- task: CopyFiles@2
-  inputs:
-    contents: '**'
-    targetFolder: $(Build.ArtifactStagingDirectory)
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+stages:
+- stage: 'Build'
+  jobs:
+  - job: 'Artifacts'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: PublishPipelineArtifact@0
+      displayName: 'Artifacts : Publish'
+      continueOnError: false
+      inputs:
+        artifactName: artifacts
+        targetPath: $(Build.SourcesDirectory)
+- stage: 'Release'
+  jobs:
+  - job: 'Templates'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: DownloadPipelineArtifact@0
+      displayName: 'Artifacts : Download'
+      continueOnError: false
+      inputs:
+        artifactName: artifacts
+        targetPath: $(System.DefaultWorkingDirectory)
+    - task: AzureResourceGroupDeployment@2
+      displayName: 'Templates : Validation'
+      continueOnError: false
+      inputs:
+        azureSubscription: $(subscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(locationName)
+        csmFile: '$(System.DefaultWorkingDirectory)/src/templates/azuredeploy.json'
+        overrideParameters: |
+          -storageAccountName $(storageAccountName) 
+          -componentName $(componentName) 
+          -serverfarmName $(serverfarmName) 
+          -siteName $(siteName)
+        deploymentMode: Validation
+    - task: AzureResourceGroupDeployment@2
+      displayName: 'Templates : Complete'
+      continueOnError: false
+      inputs:
+        azureSubscription: $(subscription)
+        resourceGroupName: $(resourceGroupName)
+        location: $(locationName)
+        csmFile: '$(System.DefaultWorkingDirectory)/src/templates/azuredeploy.json'
+        overrideParameters: |
+          -storageAccountName $(storageAccountName) 
+          -componentName $(componentName) 
+          -serverfarmName $(serverfarmName) 
+          -siteName $(siteName)
+        deploymentMode: Complete
+        deploymentName: Microsoft.VisualStudio
+  - job: 'Functions'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+    - task: DownloadPipelineArtifact@0
+      displayName: 'Artifacts : Download'
+      continueOnError: false
+      inputs:
+        artifactName: artifacts
+        targetPath: $(System.DefaultWorkingDirectory)
+    - task: ArchiveFiles@2
+      displayName: Archive
+      continueOnError: false
+      inputs:
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/src/functions'
+    - task: AzureFunctionApp@1
+      displayName: Deploy
+      continueOnError: false
+      inputs:
+        azureSubscription: $(subscription)
+        appType: functionApp
+        appName: '$(siteName)'
+        package: $(Build.ArtifactStagingDirectory)/**/*.zip
+    dependsOn: 'Templates'
