--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,9 @@ stages:
       displayName: Archive
       continueOnError: false
       inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/src/functions/'
+        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/src/functions'
+        includeRootFolder: false
+        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     - task: AzureFunctionApp@1
       displayName: Deploy
       continueOnError: false
@@ -76,5 +78,5 @@ stages:
         azureSubscription: $(subscription)
         appType: functionApp
         appName: $(siteName)
-        package: $(Build.ArtifactStagingDirectory)/**/*.zip
+        package: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
     dependsOn: 'Templates'
